--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </p>
 </main>
 
-<div class="attribution">
+<footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Claenio</a>.
-</div>
+</footer>
 </body>
 </html>
